# batchPDTE

./: .gitignore  CMakeLists.txt  README.md  Readme.md  banckmark.md  benchmark.sh  benchmark_bpdte.sh  benchmark_cmp.sh  benchmark_pdte.sh  bpdte_main.cc  cdcmp_pdte_asm.cpp  cdcmp_pdte_esm.cpp  cmp_main.cc  lhe_depth_test.cc  lhe_test.cc  pdte_main.cc  rdcmp_pdte_asm.cpp  rdcmp_pdte_esm.cpp  readmeOld.md  run.sh  serial_test.cc  tecmp_norm_pdte_asm.cpp  tecmp_norm_pdte_esm.cpp  tecmp_pdte_asm.cpp  tecmp_pdte_esm.cpp  tree_test.cc
CMP/include/: cmp.h  node.h
CMP/src/: ciphernode.cpp  cmp.cpp  node.cpp  pdte.cpp
batchPDTE/: .gitignore  CMakeLists.txt  README.md  benchmark.sh  cdcmp.h  cmp.h  cmp_main.cc  cmp_test.cc  lhe.h  lhe_depth_test.cc  lhe_test.cc  pdte_main.cc  pdte_test.cc  rdcmp.h  serial_test.cc  tecmp.h  tecmp_test.cc  utils.h
batchPDTE/data/breast_11bits/: x_test.csv
batchPDTE/data/electricity_10bits/: x_test.csv
batchPDTE/data/heart_11bits/: x_test.csv
batchPDTE/data/spam_11bits/: x_test.csv
batchPDTE/include/: asm.h  bgv.h  cdcmp.h  cmp.h  esm.h  lhe.h  node.h  pdte.h  rdcmp.h  serial.h  tecmp.h  utils.h
batchPDTE/level_up_bench/src/: client.cpp
batchPDTE/level_up_bench/src2/: CMakeLists.txt  server.h  utils.h
batchPDTE/sortinghat_bench/src/: rgsw.rs
batchPDTE/src/: bfv.cc  cdcmp.cc  lhe.cc  pdte.cc  rdcmp.cc  tecmp.cc
batchTest/: cdcmp.h  cmp.h  cmp_test.cc  rdcmp.h  tecmp.h  utils.h
cmp_bench/: depth_test.cpp
data/breast_31bits/: model.json
data/spam_11bits/: x_test.csv
extren_respositories/: readme.md
extren_respositories/level_up/: .gitignore  Readme.md
extren_respositories/level_up/cmp_bench/: benchmark.sh  build_cmp.sh  cmp_bench.cpp  utils.cpp
extren_respositories/level_up/experiments/: readme.txt
extren_respositories/level_up/src/: benchmark.sh  client.cpp  server.cpp  tree_utils.cpp  tree_utils.h  utils.cpp
extren_respositories/level_up/src2/: benchmark.sh  client.cpp  main.cpp  server.cpp  utils.cpp
extren_respositories/sortinghat/: .gitignore  Cargo.toml  RLWE_ciphertext_sample_88KB.txt  Readme.md  benchmark.sh
extren_respositories/sortinghat/src/: lib.rs  main.rs
include/: asm.h  bfv.h  bgv.h  bpdte.h  cdcmp.h  cmp.h  dcmp.h  esm.h  lhe.h  multipath.h  node.h  pdte.h  rdcmp.h  sumpath.h  sumpath2.h  tcmp.h  tecmp.h  utils.h
level_up_bench/src/: CMakeLists.txt  pdte.cpp
level_up_bench/src2/: client.cpp
sortinghat_bench/src/: decision_tree.rs  rlwe.rs
src/: asm.cc  bfv.cc  bgv.cc  bpdte.cc  cdcmp.cc  cmp.cc  dcmp.cc  esm.cc  lhe.cc  multipath.cc  node.cc  pdte.cc  rdcmp.cc  sumpath.cc  sumpath2.cc  tcmp.cc  tecmp.cc  utils.cc
